--- a/.theia/settings.json
+++ b/.theia/settings.json
@@ -1,3 +1,17 @@
 {
-    "editor.autoSave": "on"
+    "editor.autoSave": "on",
+    "cpp.buildConfigurations": [
+        {
+            "name": "",
+            "directory": ""
+        },
+        {
+            "name": "",
+            "directory": ""
+        },
+        {
+            "name": "",
+            "directory": ""
+        }
+    ]
 }
